complete foo2.c mainly for 'for' block translation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,7 +43,7 @@
             },
             "args": [
                 "-i",
-                "examples/c/logical_op.c"
+                "examples/c/foo2.c"
             ],
             "cwd": "${workspaceFolder}"
         },
