fix simple_for.c initializer bug

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,7 +43,7 @@
             },
             "args": [
                 "-i",
-                "examples/c/array.c"
+                "examples/c/simple_for.c"
             ],
             "cwd": "${workspaceFolder}"
         },
