typecast function argument dtype to parameter dtype when called

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,7 +43,7 @@
             },
             "args": [
                 "-i",
-                "examples/c/simple_for.c"
+                "examples/c/fibonacci.c"
             ],
             "cwd": "${workspaceFolder}"
         },
