add more rules for dtype cast, complete cmp.c

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,7 +43,7 @@
             },
             "args": [
                 "-i",
-                "examples/c/fibonacci.c"
+                "examples/c/cmp.c"
             ],
             "cwd": "${workspaceFolder}"
         },
