bugfix: crash caoused by function parameters may not having names

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,7 +43,7 @@
             },
             "args": [
                 "-i",
-                "examples/c/cmp.c"
+                "examples/c/foo4.c"
             ],
             "cwd": "${workspaceFolder}"
         },
