pass struct2.c, failed struct.c

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,7 +43,7 @@
             },
             "args": [
                 "-i",
-                "examples/c/struct.c"
+                "examples/c/struct2.c"
             ],
             "cwd": "${workspaceFolder}"
         },
