--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "lldb.launch.sourceMap": {
+        "/rustc/49cae55760da0a43428eba73abcb659bb70cf2e4": "${env:HOME}/.rustup/toolchains/1.44.0-x86_64-unknown-linux-gnu/lib/rustlib/src/rust"
+    }
 }
